<resources>
    <string name="app_name">Phone Bill</string>
    <string name="date_format">MM/DD/YYYY</string>
    <string name="time_format">HH:MM AmPm</string>
    <string name="number_format">XXX-XXX-XXXX</string>
    <string name="name_format">Customer</string>
    <string name="date_range_image">date range image</string>
    <string name="time_range_image">time range image</string>
    <string name="add">Add</string>
    <string name="customer_image">customer image</string>
    <string name="caller_image">caller image</string>
    <string name="callee_image">callee image</string>
    <string name="search">Search</string>
    <string name="start_sc_image">start sc image</string>
    <string name="end_sc_image">end sc image</string>
    <string name="search_customer">Search Customer</string>
    <string name="add_phone_call">Add Phone Call</string>
    <string name="search_phone_calls">Search Phone Calls</string>
    <string name="readme">README</string>
</resources>